Opened 17 years ago

Closed 17 years ago

#1388 closed bug (fixed)

[kernel] crash on ping -s 15000

Reported by: diver Owned by: axeld
Priority: critical Milestone: R1/alpha1
Component: Network & Internet/Stack Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Haiku crashed when i pinged my site with ping -s 1500

vm_soft_fault: va 0xc1c0bfd6 not covered by area in address space
vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0xc1c0bfd6, ip 0x803c4785, write 0, user 0, thread 0xbf
PANIC: vm_page_fault: unhandled page fault in kernel space at 0xc1c0bfd6, ip 0x803c4785

Welcome to Kernel Debugging Land...
Running on CPU 0
kdebug> bt
stack trace for thread 0xbf "ping"
    kernel stack: 0x9050e000 to 0x90512000
      user stack: 0x7efe7000 to 0x7ffe7000
frame            caller     <image>:function + offset
905114e4 (+  52) 8008998c   <kernel>:invoke_command + 0x0074
90511518 (+  48) 80089aaa   <kernel>:kernel_debugger_loop + 0x00de
90511548 (+  32) 8008a536   <kernel>:kernel_debugger + 0x00b2
90511568 (+ 192) 8008a479   <kernel>:panic + 0x0029
90511628 (+  64) 8005a52f   <kernel>:vm_page_fault + 0x00ab
90511668 (+ 176) 80092c2b   <kernel>:i386_handle_trap + 0x0217
iframe at 0x90511720 (end = 0x90511774)
 eax 0x0            ebx 0x803ceee8      ecx 0x90437610   edx 0xc1c0bfbe
 esi 0x90437610     edi 0x904375e8      ebp 0x90511784   esp 0x90511750
 eip 0x803c4785  eflags 0x10246
 vector: 0xe, error code: 0x0
90511718 (+ 108) 803c4785   </boot/beos/system/add-ons/kernel/network/stack>:write_data__FP10net_bufferUlPCvUl + 0x007d
90511784 (+  64) 803c4c8b   </boot/beos/system/add-ons/kernel/network/stack>:append_data__FP10net_bufferPCvUl + 0x005f
905117c4 (+  48) 803c4378   </boot/beos/system/add-ons/kernel/network/stack>:duplicate_buffer__FP10net_buffer + 0x0060
905117f4 (+  48) 803c454c   </boot/beos/system/add-ons/kernel/network/stack>:split_buffer__FP10net_bufferUl + 0x0024
90511824 (+ 144) 803da224   </boot/beos/system/add-ons/kernel/network/protocols/ipv4>:send_fragments__FP13ipv4_protocolP9net_routeP10net_bufferUl + 0x00a8
905118b4 (+ 112) 803dbeff   </boot/beos/system/add-ons/kernel/network/protocols/ipv4>:ipv4_send_routed_data__FP12net_protocolP9net_routeP10net_buffer + 0x03b7
90511924 (+  64) 803c0a2e   </boot/beos/system/add-ons/kernel/network/stack>:datalink_send_datagram__FP12net_protocolP10net_domainP10net_buffer + 0x0096
90511964 (+  80) 803dc0c0   </boot/beos/system/add-ons/kernel/network/protocols/ipv4>:ipv4_send_data__FP12net_protocolP10net_buffer + 0x01b4
905119b4 (+  80) 803c6f18   </boot/beos/system/add-ons/kernel/network/stack>:socket_send__FP10net_socketP6msghdrPCvUli + 0x01e8
90511a04 (+ 448) 80216efb   </boot/beos/system/add-ons/kernel/drivers/dev/net/net_stack>:net_stack_control__FPvUlT0Ul + 0x0377
90511bc4 (+ 336) 800402f7   <kernel>:devfs_ioctl__FPvN20UlT0Ul + 0x023f  

Change History (3)

comment:1 by axeld, 17 years ago

Component: Servers/net_server- Network & Internet/Stack
Milestone: R1R1/alpha
Priority: normalcritical

comment:2 by axeld, 17 years ago

Status: newassigned

comment:3 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev23268.

Note: See TracTickets for help on using tickets.