* init_first_data_node() did not always set tail_space correctly, leading to   potential data corruption. This fixes bug #1388. * get_node_at_offset() would return a node too early in the list if the offset   fell on a node boundary - didn't cause any actual harm, though. * append_size(): renamed variable tailSpace to previousTailSpace to make   it clearer. * Improved debug output for duplicate_buffer() and clone_buffer(). * Debug output is now prepended by the thread ID.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23268 a95241bf-73f2-0310-859d-f6bbb57e9c96